--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ matplotlib~=3.10.7
 seaborn~=0.13.2
 wordcloud~=1.9.4
 emoji~=2.15.0
-django-emoji~=2.2.2
+emoji==2.8.0
 nltk~=3.9.2
 urlextract~=1.9.0
